# awesome-llm-app

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
0730/: README.md  test_pdf2md.py
0730/utils/: pdf2image_tool.py
1223/chat/: go.mod  main.go  ollama.go  template.go
1223/chat/.cache/go-build/01/: 01347eed62eb9aab9b6b78a52b4f486ee0c7bd684547a91be16278474e00e44e-a
1223/chat/.cache/go-build/02/: 02b56ce0ca49c6518f905cfb8238c2be0e04a9dddc22efc7ce6b3719669811d2-a
1223/chat/.cache/go-build/03/: 0306f4c939ae46c73d19bec7b33a783f574815429df2703d55f3e792f84c0142-d  0308287e320649c75a786b7464f5d00101aad876334da87076178c11f0b73ae7-a
1223/chat/.cache/go-build/04/: 04fe812935dce29251e42d92b32e2379033792f8e57b9f848ae7dc4ef4b7f4d1-d
1224/todo-agent/: go.sum
go-agent/: .example.env  go.mod  go.sum
go-agent/adk/common/prints/: util.go
go-agent/adk/common/store/: store.go
go-agent/adk/common/trace/: coze_loop.go
go-agent/adk/helloworld/: helloworld.go
go-agent/adk/multiagent/layered-supervisor/: agent.go  layered_supervisor.go
go-agent/adk/multiagent/plan-execute-replan/: plan-execute-replan.go
go-agent/components/prompt/: chat_prompt.go
python-agent/0724/: gemini_grounding.py  instructions.py
python-agent/0725/: cot_example.py
python-agent/0730/: example_usage.py  test_llm_pdf2md_tool.py  test_qwen_vl_model.py
python-agent/0730/utils/: file_downloader_tool.py  llm_pdf2md_tool.py
python-agent/1223/chat/: generate.go  go.sum  stream.go
python-agent/1224/todo-agent/: go.mod  main.go
utils/: proxy_tool.py
(+202 files in other folders)
